# ai-council

./: .env.example  .gitignore  README.md  config.py  main.py  models.py  pyproject.toml
council/: __init__.py  hats.py  member.py  moderator.py  prompts.py  session.py
services/: __init__.py  openrouter.py  search.py
ui/: __init__.py  app.py
